--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,9 @@
 
 # Dependency directories
 vendor/
-go.mod
-go.sum
+# go.mod 和 go.sum 应该被提交到版本控制
+# go.mod
+# go.sum
 
 # IDE files
 .vscode/
@@ -23,5 +24,6 @@ go.sum
 *.swo
 
 # Build outputs
-spider
+/spider
 spider_*
+*.exe
