20251027-解决js爬取过滤的问题，初步解决，后续还有测试研究，进一步优化，因当前程序不够成熟

--- a/config.json
+++ b/config.json
@@ -185,7 +185,8 @@
     "_exclude_note_1": "✅ JS文件已从排除列表移除，程序会自动访问和分析JS",
     "_exclude_note_2": "✅ 静态资源只记录不请求，提升爬取效率70%+",
     "_exclude_note_3": "✅ 黑名单和超出范围的URL也只记录不请求",
-    "exclude_extensions": [
+    "exclude_extensions": [],
+    "_exclude_extensions": [
       "jpg", "jpeg", "png", "gif", "svg", "ico", "webp", "bmp",
       "css", "scss", "sass",
       "woff", "woff2", "ttf", "eot", "otf",
