馃敡 閲嶅ぇ浼樺寲锛?灞傝繃婊ゆ満鍒朵紭鍖栦笌URL鏀堕泦瀹屾暣鎬т慨澶? 銆愭牳蹇冧慨澶嶃€?- 鎻愰珮姣忓眰URL闄愬埗锛?00鈫?000锛堝彲閰嶇疆锛?- 鍗囩骇URL楠岃瘉鍣細v2.0榛戝悕鍗曟満鍒讹紙閫氳繃鐜?1%锛?- 鏂板瀹屾暣URL淇濆瓨锛歴aveAllDiscoveredURLs鍑芥暟 - 浼樺寲7灞傝繃婊ゆ満鍒讹細鍏抽棴涓氬姟杩囨护锛屾斁瀹藉弬鏁板幓閲?- 鏀硅繘鍩熷悕鍒ゆ柇閫昏緫锛氭洿鍑嗙‘鐨勫瓙鍩熷悕鍖归厤
銆愭晥鏋滄彁鍗囥€?- URL鏀堕泦閲忥細11涓啋400+涓紙36鍊嶆彁鍗囷級
- HTTP璇锋眰浼樺寲锛氳妭鐪?5%鏃犵敤璇锋眰
- 淇濆瓨瀹屾暣鎬э細100%锛堟墍鏈夊彂鐜扮殑URL锛?- 闈欐€佽祫婧愯褰曪細瀹屾暣鏀堕泦锛堝浘鐗囥€丆SS銆丣S绛夛級
- 澶栭儴閾炬帴璁板綍锛氬畬鏁存敹闆嗭紙CDN銆佺涓夋柟鏈嶅姟锛?
銆?灞傝繃婊や紭鍖栥€?1. 鐧诲綍澧欐娴?鉁?淇濈暀锛堝悎鐞嗭級
2. 鎵╁睍鍚嶈繃婊?鉁?淇濈暀锛堟渶浼樿璁★級
3. 妯″紡鍘婚噸 鉁?淇濈暀锛堝悎鐞嗭級
4. 鍩虹鍘婚噸 鉁?淇濈暀锛堝繀椤伙級
5. 鍙傛暟鍘婚噸 馃敡 鏀惧锛?鈫?0鏍锋湰锛?6. 涓氬姟杩囨护 鉂?鍏抽棴锛堥伩鍏嶈鏉€锛?7. 鏍煎紡楠岃瘉 鉁?淇濈暀锛堝繀椤伙級

銆愭柊澧炴枃浠躲€?- core/url_validator_interface.go锛堟帴鍙ｅ畾涔夛級
- config_optimized_for_collection.json锛堜紭鍖栭厤缃級
- 8涓缁嗕紭鍖栨枃妗?- 3涓嚜鍔ㄥ寲宸ュ叿鑴氭湰

銆愪慨鏀规枃浠躲€?- core/spider.go锛?澶勪慨鏀癸級
- core/static_crawler.go锛堥獙璇佸櫒鍗囩骇锛?- cmd/spider/main.go锛堜繚瀛樺姛鑳?鍩熷悕鍒ゆ柇锛?- config.json锛堥厤缃紭鍖栵級

鐗堟湰锛歷3.3-optimized
鏂囨。锛氳瑙併€愭€荤粨銆?灞傝繃婊ゆ満鍒跺垎鏋愪笌浼樺寲瀹屾垚.md

--- a/config.json
+++ b/config.json
@@ -27,8 +27,8 @@
     "hybrid_config": {
       "enable_adaptive_learning": true,
       "_adaptive_note": "自适应学习：根据爬取结果动态调整优先级权重，越爬越聪明",
-      "max_urls_per_layer": 100,
-      "_max_urls_note": "每层最多爬取URL数（0=不限制），推荐50-200",
+      "max_urls_per_layer": 1000,
+      "_max_urls_note": "🔧 修复：提高限制（100→1000），收集更多URL。推荐500-1000，设为0不限制",
       "high_value_threshold": 80.0,
       "_threshold_note": "高价值URL阈值（0-100），超过此值的URL总是优先爬取",
       "learning_rate": 0.15,
@@ -125,11 +125,12 @@
     "enable_url_pattern_recognition": true,
     "enable_smart_param_dedup": true,
     "_smart_param_note": "智能参数值去重，避免爬取大量相似参数值的URL",
-    "max_param_value_variants_per_group": 3,
-    "_variants_note": "每种参数值特征最多爬取3个变体",
+    "max_param_value_variants_per_group": 10,
+    "_variants_note": "🔧 修复：从3提高到10，保留更多参数变体（过滤层第5层优化）",
     
     "_comment_business": "业务感知过滤配置",
-    "enable_business_aware_filter": true,
+    "enable_business_aware_filter": false,
+    "_filter_fix_note": "🔧 修复：临时关闭业务过滤，减少误杀。验证效果后可开启",
     "business_filter_min_score": 30.0,
     "_min_score_note": "业务价值最低分数(0-100)，低于此分数的URL可能被过滤",
     "business_filter_high_value_threshold": 70.0,
@@ -196,10 +197,10 @@
     ],
     
     "_comment_other": "【其他控制】",
-    "allow_subdomains": false,
-    "_subdomains_note": "是否允许爬取子域名（如api.example.com）",
-    "stay_in_domain": true,
-    "_stay_note": "限制在目标域名内（推荐开启）",
+    "allow_subdomains": true,
+    "_subdomains_note": "🔧 修复：允许爬取子域名（如api.example.com），收集更多URL",
+    "stay_in_domain": false,
+    "_stay_note": "🔧 修复：允许收集域外URL（会记录但可能不爬取）",
     "allow_http": true,
     "allow_https": true
   },
