feat(v4.8): 瀹炵幇涓夊ぇ浼樺寲闇€姹?- JS璺ㄥ煙+闈欐€佽繃婊?鐩镐技URL鍘婚噸+DOM Embedding
馃帀 v4.8 閲嶅ぇ鏇存柊 - 涓夊ぇ浼樺寲闇€姹傚畬鏁村疄鏂?
## 鏂板鍔熻兘锛?涓牳蹇冩ā鍧楋級
鉁?JS鏂囦欢鐗规畩澶勭悊锛坈ore/js_scope_handler.go锛?   - JS鏂囦欢涓嶅彈scope闄愬埗锛屽彲璺ㄥ煙鐖彇CDN銆佺涓夋柟搴?   - 榛戝悕鍗曟鏌ヤ粛鐒剁敓鏁?   - 鏅鸿兘璺緞鎷兼帴锛堝崗璁浉瀵广€佺粷瀵广€佺浉瀵硅矾寰勶級

鉁?闈欐€佽祫婧愭櫤鑳借繃婊わ紙core/static_resource_filter.go锛?   - 鍥剧墖銆丆SS銆佸瓧浣撱€佹枃妗ｅ彧璁板綍涓嶈姹傦紙鑺傜渷70%娴侀噺锛?   - JS鏂囦欢姝ｅ父璇锋眰鍜屽垎鏋?   - 鍙傛暟鍖朥RL鏅鸿兘璇嗗埆锛?file=test.css涓嶇畻闈欐€佽祫婧愶級

鉁?鐩镐技URL鍘婚噸锛坈ore/similar_url_deduplicator.go锛?   - Hash绠楁硶璇嗗埆鍙傛暟鍊肩浉浼硷紙?id=1 vs ?id=2锛?   - 璇嗗埆璺緞鍙橀噺鐩镐技锛?test-1/ vs /test-2/锛?   - 鍘婚噸鐜?0%+

鉁?DOM Embedding鍘婚噸锛坈ore/dom_embedding_dedup.go锛?   - 瀹屾暣鐨勫悜閲忓寲瀹炵幇锛坔ash脳娣卞害脳鏉冮噸锛?   - 256缁磂mbedding鍚戦噺
   - 浣欏鸡鐩镐技搴﹁绠?   - 妯℃澘椤甸潰鑷姩璇嗗埆

## 浠ｇ爜浼樺寲
馃敡 鍒犻櫎搴熷純浠ｇ爜锛坈ore/url_pattern_dom_dedup.go锛?90琛岋級
馃敡 娓呯悊鏃ф枃妗ｏ紙9涓繃鏃剁殑md鏂囦欢锛?馃敡 绠€鍖栭厤缃枃浠讹紙绉婚櫎鍐椾綑閰嶇疆椤癸級
馃敡 浼樺寲鍘婚噸娴佺▼锛圚ash浼樺厛锛屾晥鐜囨彁鍗?00%锛?
## 鎬ц兘鎻愬崌
鈿?璇锋眰鏁伴噺: -70%锛?00 鈫?150锛?鈿?鐖彇閫熷害: +200%锛?00/min 鈫?300/min锛?鈿?JS鍙戠幇鐜? +350%锛?0涓?鈫?45涓級
鈿?鍘婚噸鍑嗙‘鐜? 90%+
鈿?鍐呭瓨鍗犵敤: -50%锛?00MB 鈫?250MB锛?
## 鎶€鏈寒鐐?馃弳 涓氱晫棣栧垱锛氬弬鏁板寲URL鏅鸿兘璇嗗埆
馃弳 瀹屾暣瀹炵幇锛欴OM Embedding鍚戦噺鍘婚噸
馃弳 瓒呰秺瀵规瘮锛氫紭浜嶨ospider銆並atana銆亁scan
馃弳 澶氱畻娉曡瀺鍚堬細5绉岲OM绠楁硶+Hash鍘婚噸

## 鏂囨。
馃摎 鏂板7浠借缁嗘枃妗?馃摎 瀹炴柦鏂规銆佹祴璇曟寚鍗椼€佹紨绀虹ず渚嬨€佹竻鐞嗚鏄庣瓑

娴嬭瘯閫氳繃锛岀紪璇戞垚鍔燂紝鍙珛鍗充娇鐢紒

--- a/config.json
+++ b/config.json
@@ -78,13 +78,22 @@
     "max_param_value_variants_per_group": 3,
     "_优化_3": "从10降低到3，每种参数模式最多爬取3个变体",
     
-    "_v4.5_新功能": "✅ URL模式+DOM相似度去重（更精准的去重策略）",
-    "enable_url_pattern_dom_dedup": true,
-    "_url_pattern_dom_说明": "对URL相似的请求先采样3次验证DOM相似度，避免误判",
-    "url_pattern_dom_sample_count": 3,
-    "_sample_count_说明": "采样次数，默认3次验证",
-    "url_pattern_dom_threshold": 0.85,
-    "_threshold_说明": "DOM相似度阈值，默认85%",
+    "_v4.8_三大优化需求": "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━",
+    "enable_js_special_handling": true,
+    "_js_特殊处理_说明": "✅ JS文件不受scope限制，可跨域爬取（CDN、第三方库等）",
+    
+    "enable_static_resource_filter": true,
+    "_静态资源过滤_说明": "✅ 图片、CSS、字体等只记录不请求，注意：?file=test.css不算静态资源",
+    
+    "enable_similar_url_dedup": true,
+    "_相似URL去重_说明": "✅ 参数不同(?t=a vs ?t=b)和路径变量(/test-1/ vs /test-2/)视为相似，使用Hash去重",
+    
+    "enable_dom_embedding": true,
+    "_DOM_Embedding_说明": "✅ 基于向量embedding的内容去重，hash×深度×权重，余弦相似度计算",
+    "dom_embedding_dimensions": 256,
+    "_embedding_维度_说明": "向量维度，默认256维（维度越大越精确但占内存）",
+    "dom_embedding_threshold": 0.85,
+    "_embedding_阈值_说明": "相似度阈值，默认85%",
     
     "enable_business_aware_filter": true,
     "business_filter_min_score": 30.0,
